# serial

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: build-desktop.yml
.reasonix/truncated-results/: 1780904443019-4a264f69-web_fetch.txt
docs/superpowers/plans/: 2026-06-06-serial-debugger.md
docs/superpowers/specs/: 2026-06-06-serial-debugger-design.md  2026-06-10-app-icon-design.md
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/export/: exporter.rs
src-tauri/src/serial/: commands.rs  encoding.rs  manager.rs  mod.rs
src/assets/: main.css
src/components/: command_manager_tab.rs  mod.rs  receive_send_tab.rs  serial_panel.rs  status_bar.rs  tab_nav.rs  title_bar.rs
src/services/: api.rs  store.rs
