[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "serial-debugger-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console"] }
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = "0.4"
serde-wasm-bindgen = "0.6"
