[package]
name = "serial-debugger"
version = "0.1.0"
edition = "2021"

[lib]
name = "serial_debugger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.9"
libc = "0.2"
window-vibrancy = "0.7"
encoding_rs = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
